--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
   "name": "js-globe",
-  "version": "1.0.0",
-  "description": "A 3D globe visualization package using three.js",
+  "version": "1.0.17",
+  "description": "A 3D globe library for adding locations and countries",
   "main": "src/index.js",
-  "scripts": {
-    "build": "babel src --out-dir dist"
+  "module": "src/index.mjs",
+  "types": "src/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./src/index.mjs",
+      "require": "./src/index.js",
+      "default": "./src/index.js"
+    },
+    "./package.json": "./package.json"
   },
-  "keywords": [
-    "globe",
-    "3D",
-    "three.js",
-    "visualization"
-  ],
-  "author": "Ali Asghar Gill",
-  "license": "MIT",
+  "scripts": {
+    "build": "node_modules/.bin/webpack --config webpack.config.js",
+    "start": "node_modules/.bin/webpack-dev-server --config webpack.config.js"
+  },
   "dependencies": {
-    "three": "^0.156.1"
+    "three": "latest",
+    "@tweenjs/tween.js": "latest"
+  },
+  "peerDependencies": {
+    "three": "latest"
   },
   "devDependencies": {
-    "@babel/cli": "^7.25.9",
-    "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0"
-  }
+    "webpack": "latest",
+    "webpack-cli": "latest",
+    "webpack-dev-server": "latest"
+  },
+  "author": "Ali Asghar",
+  "license": "MIT"
 }
